css/styles.css
/* ... */
.footer .footer-links .footer-list a {
  margin: 0 0 calc(var(--gdu) / 4) 0;
}

.footer .footer-mail {
  padding: 20vmin var(--gdu) calc(var(--gdu) * 1) var(--gdu);
}

.fs-xs {
  font-size: var(--fs-xs);
}

.fs-sm {
  font-size: var(--fs-sm);
}

.fs-md {
  font-size: var(--fs-md);
}

.fs-lg {
  font-size: var(--fs-lg);
  line-height: 110%;
  letter-spacing: 0.3px;
}

.fs-xl {
  font-size: var(--fs-xl);
}

.fs-2xl {
  font-size: var(--fs-2xl);
}

.fs-3xl {
  font-size: var(--fs-3xl);
}

.fs-4xl {
  font-size: var(--fs-4xl);
}

.full-width-hr {
  margin: 0 var(--gdu);
  height: 2px;
  background-color: var(--secondary);
}

.fw-container {
  display: flex;
  flex-flow: row wrap;
  gap: calc(var(--gdu) - 1px) var(--gdu);
}

.fw-container + p {
  text-indent: calc(var(--two-col-width) + var(--gdu));
}

.fw-w {
  aspect-ratio: 1 / 1;
  position: relative;
  cursor: pointer;
  display: flex;
  align-items: center;
  overflow: hidden;
}

.all-work {
  border: var(--borders-thickness) solid var(--secondary);
  display: flex;
  flex-flow: column;
  justify-content: center;
  align-items: center;
}

.all-work i {
  line-height: 30%;
}

.fw-w img,
.fw-w video {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.fw-w span {
  opacity: 0;
  position: absolute;
  left: 0;
  bottom: 0;
  right: 0;
  padding: calc(var(--gdu) / 2) calc(var(--gdu) / 1.5);
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  color: var(--primary);
  background-color: rgba(0, 0, 0, 0.7);
}

.fw-w:hover span {
  opacity: 1;
}

.fw-w-small {
  width: calc(25% - (var(--gdu) * 3 / 4));
  height: calc(25% - (var(--gdu) * 3 / 4));
}

.based {
  transform: translateY(calc(100% + var(--gdu)));
}

.fw-w-large {
  width: calc(50% - (var(--gdu) / 2));
  height: calc(50% - (var(--gdu) / 2));
}

.inline-contain {
  padding-inline: var(--gdu);
}

.mp {
  width: 100%;
  border-bottom: var(--borders-thickness) solid var(--secondary);
  padding-block: calc(var(--gdu) / 3);

  display: flex;
  justify-content: space-between;
}

.mp div {
  color: var(--secondary);
  padding-inline: 0;
}

.mp .betterOn {
  text-align: end;
}

.mp .betterOnShort {
  display: none;
  text-align: end;
}

.mp:first-child {
  border-top: var(--borders-thickness) solid var(--secondary);
}

.pd-container {
  display: flex;
  flex-flow: row wrap;
  gap: var(--gdu);
}

.pd-full {
  width: 100%;
  height: fit-content;
  max-height: 100vh;
  overflow: hidden;

  display: flex;
  justify-content: start;
  align-items: center;
}

.pd-full img {
  width: 100%;
  height: auto;
  object-fit: cover;
}

.pd-half {
  width: calc(50% - var(--gdu) / 2);
  height: auto;
  max-height: 60vh;
  overflow: hidden;

  display: flex;
  justify-content: start;
  align-items: center;
}

.pd-half img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.pd-text {
  display: inline;
  padding: var(--gdu) calc(var(--gdu) * 2) var(--gdu) 0;
}

.pd-text a {
  color: var(--secondary);
}

.pd-text a:hover {
  color: var(--accent);
}

.pd-title,
.pd-desc {
  justify-content: center;
  overflow: visible;
}

.section-title {
  margin: 0 0 calc(var(--gdu) / 2) 0;
}

.skills-container {
  display: flex;
  flex-flow: column nowrap;
  border-top: var(--borders-thickness) solid var(--secondary);
  position: relative;
  overflow: hidden;
}

.skills-container-title {
  position: absolute;
  top: 7px;
  left: 0;
  width: var(--one-col-width);
}

.skill-row {
  display: flex;
  flex-flow: row nowrap;
  padding: calc(var(--gdu) / 3) 0;
  border-bottom: var(--borders-thickness) solid var(--secondary);

  width: 100%;
  margin: 0 var(--gdu) 0 calc(var(--one-col-width) + var(--gdu));
}

.skill-row:last-child {
  border-bottom: none;
}

.skill-row .skill-name {
  width: var(--one-col-width);
}

.skill-row .skill-usage {
  width: var(--two-col-width);
  margin: 0 0 0 var(--gdu);
}

.skill-title-row {
  width: 100%;
  margin: 0;
}

.skill-title-row .skill-name {
  width: var(--one-col-width);
  margin: 0 0 0 var(--gdu);
}

.skill-title-row .skill-usage {
  width: var(--two-col-width);
  margin: 0 0 0 var(--gdu);
}

.skill-title {
  width: var(--one-col-width);
}

.social-list {
  list-style: none;
  padding: 0;
}

.social {
  margin: 0 0 calc(var(--gdu) / 4) 0;
}

.social a:hover {
  opacity: 0.7;
}

.symbola {
  font-family: "Symbola";
}

.theme-light {
  background-color: var(--primary);
  color: var(--secondary);
  transition: background-color 200ms ease;
}

.theme-light a {
  color: var(--secondary);
}

.theme-light svg .cls-1 {
  fill: var(--secondary);
}

.theme-light .hover-underline-animation::after {
  background-color: var(--secondary);
}

.theme-dark {
  background-color: var(--secondary);
  color: var(--primary);
  transition: background-color 200ms ease;
}

.theme-dark a {
  color: var(--primary);
}

.theme-dark svg .cls-1 {
  fill: var(--primary);
}

.theme-dark a {
  color: var(--primary);
}

.theme-dark .hover-underline-animation::after {
  background-color: var(--primary);
}

.tool {
  margin-inline: var(--gdu);
}

.tool > :not(div:nth-child(1)) {
  padding-block: calc(var(--gdu) / 3);
  border-top: var(--borders-thickness) solid var(--secondary);
}

.tool .title {
  padding-top: calc(var(--gdu) / 2);
  border-top: var(--borders-thickness) solid var(--secondary);
  font-size: var(--fs-lg);
}
/* ... */

